contact section spacing fixed

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -45,6 +45,8 @@
 
 @media screen and (max-width: 767px) {
     #contact {
+        padding-top: 0;
+        
         .btn-primary {
             a {
                 &::after{
